--- a/PnPCrudSample/config/write-manifests.json
+++ b/PnPCrudSample/config/write-manifests.json
@@ -1,3 +1,5 @@
 {
-  "cdnBasePath": "<!-- PATH TO CDN -->"
+  //"cdnBasePath": "https://azurecdntestspf.azureedge.net/cdnendpoint"
+  "cdnBasePath": "https://azurecdntestspf.blob.core.windows.net/cdnendpoint"
+  //https://azurecdntestspf.blob.core.windows.net/cdnendpoint
 }
