--- a/DataTablesDrop5a/package.json
+++ b/DataTablesDrop5a/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@microsoft/sp-client-base": "~0.4.0",
     "@microsoft/sp-client-preview": "~0.5.0",
-    "@microsoft/sp-webpart-base": "^0.1.0"
+    "@microsoft/sp-webpart-base": "^0.1.0",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "~0.7.0",
